# Ros_tutorial

./: README.md
launch_ws/: frames_2025-09-18_15.47.05.gv
launch_ws/install/: local_setup.sh  setup.sh
launch_ws/log/: latest_build
launch_ws/src/cpp_launch_example/: CMakeLists.txt
launch_ws/src/cpp_launch_example/launch/: my_script_launch.yaml
launch_ws/src/launch_tutorial/: package.xml  setup.py
launch_ws/src/launch_tutorial/launch/: broadcaster_listener_launch.py  launch_turtlesim_launch.py  turtlesim_rviz_launch.py  turtlesim_world_2_launch.py  turtlesim_world_3_launch.py
project_ws/install/: local_setup.sh  setup.sh
project_ws/log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/my_bag/: metadata.yaml  my_bag_0.mcap
ros2_ws/src/bag_recorder_nodes/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_parameter_event_handler/: CMakeLists.txt
ros2_ws/src/cpp_parameter_event_handler/src/: parameter_event_handler.cpp
ros2_ws/src/cpp_parameters/: package.xml
ros2_ws/src/cpp_parameters/src/: cpp_parameters_node.cpp
ros2_ws/src/cpp_pubsub/: CMakeLists.txt
ros2_ws/src/cpp_pubsub/src/: member_function_with_topic_statistics.cpp  publisher_lambda_function.cpp  subscriber_lambda_function.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt
ros2_ws/src/more_interfaces/: CMakeLists.txt
ros2_ws/src/polygon_base/: CMakeLists.txt  package.xml
ros2_ws/src/polygon_base/src/: area_node.cpp
ros2_ws/src/polygon_plugins/: package.xml
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/urdf_tutorial_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/urdf_tutorial_cpp/include/urdf_tutorial_cpp/: point_display.hpp
ros2_ws/src/urdf_tutorial_cpp/src/: point_display.cpp  urdf_tutorial.cpp
ros2_ws/timed_synthetic_bag/: metadata.yaml  timed_synthetic_bag_0.mcap
(+89 files in other folders)
